--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
     <div class="container">
         <h1>Conversor de Temperatura</h1>
         <form>
-            <label for="temp">Temperatura:</label>
+            <label for="temp">Temperatura</label>
             <input type="number" id="temp" name="temp" required>
-            <label for="from">De:</label>
+            <label for="from">de</label>
             <select id="from" name="from">
                 <option value="celsius">Celsius</option>
                 <option value="fahrenheit">Fahrenheit</option>
             </select>
-            <label for="to">Para:</label>
+            <label for="to">para</label>
             <select id="to" name="to">
                 <option value="celsius">Celsius</option>
                 <option value="fahrenheit">Fahrenheit</option>
